--- a/server/package.json
+++ b/server/package.json
@@ -17,5 +17,10 @@
 		"nodemon": "^3.0.1",
 		"tslint": "^6.1.3",
 		"typescript": "^5.2.2"
+	},
+	"dependencies": {
+		"@types/express": "^4.17.18",
+		"express": "^4.18.2",
+		"socket.io": "^4.7.2"
 	}
 }
