--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,9 @@
 	},
 	"dependencies": {
 		"@types/express": "^4.17.18",
+		"@types/uuid": "^9.0.4",
 		"express": "^4.18.2",
-		"socket.io": "^4.7.2"
+		"socket.io": "^4.7.2",
+		"uuid": "^9.0.1"
 	}
 }
